--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "dotenv": "^6.0.0",
+    "helmet": "^3.12.1",
     "inversify": "^4.13.0",
     "inversify-restify-utils": "^3.3.1",
     "jsonwebtoken": "^8.3.0",
@@ -28,6 +29,7 @@
   },
   "devDependencies": {
     "@types/dotenv": "^4.0.3",
+    "@types/helmet": "^0.0.38",
     "@types/morgan": "^1.7.35",
     "@types/redis": "^2.8.6",
     "@types/restify": "^7.2.0",
