--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^6.0.0",
     "helmet": "^3.12.1",
     "inversify": "^4.13.0",
+    "inversify-binding-decorators": "^4.0.0",
     "inversify-restify-utils": "^3.3.1",
     "jsonwebtoken": "^8.3.0",
     "morgan": "^1.9.0",
